--- a/CalvinBerrett_CSP/View/Base.lproj/ Main.storyboard
+++ b/CalvinBerrett_CSP/View/Base.lproj/ Main.storyboard
@@ -39,14 +39,14 @@
                     </view>
                     <connections>
                         <outlet property="textView" destination="b7o-mA-JUF" id="IkX-uE-eOu"/>
-                        <outlet property="webViewer" destination="rmV-IH-pZW" id="wyt-1H-tM1"/>
+                        <outlet property="webViewer" destination="rmV-IH-pZW" id="n8r-Iq-W7Y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zti-oj-QYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1156" y="-0.44977511244377816"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Internet Samples-->
         <scene sceneID="g8b-Cm-46o">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="H9N-JT-eTz" customClass="InternetMasterViewController" customModule="CalvinBerrett_CSP" customModuleProvider="target" sceneMemberID="viewController">
@@ -62,6 +62,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="MC2-8O-uTK" kind="showDetail" identifier="showDetail" id="Tkg-vX-zFl"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -69,7 +72,7 @@
                             <outlet property="delegate" destination="H9N-JT-eTz" id="KPR-Im-Lx4"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="yhV-v2-3qj"/>
+                    <navigationItem key="navigationItem" title="Internet Samples" id="yhV-v2-3qj"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXZ-hA-Ovf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -512,4 +515,7 @@
         <image name="Ew Water" width="1280" height="720"/>
         <image name="javaSample" width="1126" height="754"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Tkg-vX-zFl"/>
+    </inferredMetricsTieBreakers>
 </document>
