--- a/CalvinBerrett_CSP/View/Base.lproj/ Main.storyboard
+++ b/CalvinBerrett_CSP/View/Base.lproj/ Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,7 +45,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zti-oj-QYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1156" y="-0.44977511244377816"/>
+            <point key="canvasLocation" x="-816.79999999999995" y="-0.44977511244377816"/>
         </scene>
         <!--Internet Samples-->
         <scene sceneID="g8b-Cm-46o">
@@ -125,7 +126,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <segue destination="E5v-ax-4NS" kind="show" id="3kJ-6q-s6A"/>
+                                    <segue destination="quk-9E-9G0" kind="showDetail" id="f2n-wG-HwS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -135,7 +136,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="109.59999999999999" y="115.59220389805098"/>
+            <point key="canvasLocation" x="448.80000000000001" y="115.59220389805098"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Q3F-fD-N2V">
@@ -185,7 +186,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YG1-s7-8cN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="109.59999999999999" y="777.66116941529242"/>
+            <point key="canvasLocation" x="448.80000000000001" y="777.66116941529242"/>
         </scene>
         <!--Programming Screen-->
         <scene sceneID="RhS-Ai-t1q">
@@ -200,7 +201,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O9u-pz-mCB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="778"/>
+            <point key="canvasLocation" x="1108" y="777.66116941529242"/>
         </scene>
         <!--Internet Screen-->
         <scene sceneID="a4h-MQ-Szm">
@@ -248,7 +249,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B2G-dn-MoS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1416.8" y="777.66116941529242"/>
+            <point key="canvasLocation" x="1756" y="777.66116941529242"/>
         </scene>
         <!--Global Impact Screen-->
         <scene sceneID="ww5-2i-76f">
@@ -301,7 +302,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CWc-Vx-orq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2064.8000000000002" y="777.66116941529242"/>
+            <point key="canvasLocation" x="2404" y="777.66116941529242"/>
         </scene>
         <!--Creativity Screen-->
         <scene sceneID="g3b-LT-Jew">
@@ -316,7 +317,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mN8-4a-mIp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="116"/>
+            <point key="canvasLocation" x="1108" y="115.59220389805098"/>
         </scene>
         <!--Abstraction Screen-->
         <scene sceneID="lNW-x9-3Wm">
@@ -331,7 +332,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vMN-pU-hCY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1417" y="116"/>
+            <point key="canvasLocation" x="1756" y="115.59220389805098"/>
         </scene>
         <!--Algorithms Screen-->
         <scene sceneID="FkD-jN-2ZZ">
@@ -372,7 +373,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cw5-eY-rBJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2064.8000000000002" y="115.59220389805098"/>
+            <point key="canvasLocation" x="2404" y="115.59220389805098"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Z6S-5e-vJf">
@@ -444,6 +445,62 @@
             </objects>
             <point key="canvasLocation" x="-2186.4000000000001" y="1524.2878560719641"/>
         </scene>
+        <!--Creativity Screen-->
+        <scene sceneID="8xL-Ya-cuQ">
+            <objects>
+                <collectionViewController id="k41-9s-PzA" customClass="CreativityScreen" customModule="CalvinBerrett_CSP" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Hzz-nK-fZf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ste-ig-QpH">
+                            <size key="itemSize" width="250" height="300"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="artIdentifier" id="amg-J2-yUi" customClass="ArtCell" customModule="CalvinBerrett_CSP" customModuleProvider="target">
+                                <rect key="frame" x="62.5" y="0.0" width="250" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="300"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lk4-Oe-0KE">
+                                            <rect key="frame" x="10" y="0.0" width="250" height="250"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WuY-i1-T42">
+                                            <rect key="frame" x="0.0" y="279" width="250" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="WuY-i1-T42" firstAttribute="top" secondItem="lk4-Oe-0KE" secondAttribute="bottom" id="2AE-hX-Ocj"/>
+                                    <constraint firstItem="WuY-i1-T42" firstAttribute="leading" secondItem="amg-J2-yUi" secondAttribute="leadingMargin" id="H7E-DI-Az9"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="WuY-i1-T42" secondAttribute="bottom" id="e5F-gi-w5m"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="WuY-i1-T42" secondAttribute="trailing" id="wdN-BA-g5S"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageName" destination="WuY-i1-T42" id="g8D-Ev-ptM"/>
+                                    <outlet property="imageView" destination="lk4-Oe-0KE" id="AiX-7A-tQM"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="k41-9s-PzA" id="tfP-47-bAT"/>
+                            <outlet property="delegate" destination="k41-9s-PzA" id="rlv-CB-uje"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="o57-4d-Yfs"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gtU-6Y-hGK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2455.1999999999998" y="615.74212893553226"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ela-tg-bzU">
             <objects>
@@ -513,6 +570,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Vm-Yp-ueQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3479.1999999999998" y="1524.2878560719641"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pzd-ca-qrU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="quk-9E-9G0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Gvh-il-hlw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="k41-9s-PzA" kind="relationship" relationship="rootViewController" id="ckA-aY-MQc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8HJ-Nk-3Gv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3236" y="616"/>
         </scene>
     </scenes>
     <resources>
